# pygeofilter-aeronet

./: .gitignore  404.html  Taskfile.yml  index.html  mkdocs.yaml  output.parquet  pyproject.toml  sitemap.xml  stations.parquet
.github/: dependabot.yml
.github/workflows/: build.yaml  docs.yaml  dump_stations.yaml  package.yaml
api/latest/pygeofilter_aeronet/: index.html
api/latest/pygeofilter_aeronet/aeronet_client/: index.html
api/latest/pygeofilter_aeronet/aeronet_client/api/: index.html
api/latest/pygeofilter_aeronet/aeronet_client/api/default/: index.html
api/latest/pygeofilter_aeronet/aeronet_client/api/default/get_stations/: index.html
api/latest/pygeofilter_aeronet/aeronet_client/api/default/search/: index.html
api/latest/pygeofilter_aeronet/aeronet_client/client/: index.html
api/latest/pygeofilter_aeronet/aeronet_client/errors/: index.html
api/latest/pygeofilter_aeronet/aeronet_client/models/: index.html
api/latest/pygeofilter_aeronet/aeronet_client/models/search_avg/: index.html
api/latest/pygeofilter_aeronet/aeronet_client/types/: index.html
api/latest/pygeofilter_aeronet/aeronet_stac_extension/: index.html
api/latest/pygeofilter_aeronet/cli/: index.html
api/latest/pygeofilter_aeronet/evaluator/: index.html
api/latest/pygeofilter_aeronet/utils/: index.html
cli/: index.html
cwl/: aeronet-client.yaml
cwl-clt/: aeronet-client.cwl
design/: index.html
docs/: cli.ipynb  cli.md  index.ipynb  output.parquet
docs/diagrams/src/: class.puml
docs/diagrams/src/activity/: dump_stations.puml
docs/samples/: geo_search.ipynb  level_10.ipynb  level_15.ipynb  level_20_aod.ipynb  level_20_sda.ipynb
docs/use_cases/: matchup.ipynb  stations.ipynb  stations_matchup.ipynb
samples/geo_search/: index.html
samples/level_10/: index.html
samples/level_15/: index.html
samples/level_20_aod/: index.html
samples/level_20_sda/: index.html
schemas/: aeronet_openapi.yaml  search.yaml
search/: search_index.json
src/pygeofilter_aeronet/: __about__.py  __init__.py  aeronet_stac_extension.py  cli.py  evaluator.py  utils.py
tests/: tests_aeronet.py
use_cases/matchup/: index.html
use_cases/stations/: index.html
use_cases/stations_matchup/: index.html
