[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygeofilter-aeronet"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Fabrice Brito", email = "fabrice.brito@terradue.com" },
  { name = "Simone Tripodi", email = "simone.tripodi@terradue.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
# pygeofilter-duckdb 0.1.0 declares:
#
# duckdb>=0.2.0
# duckdb<1.2.0
#  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "pygeofilter==0.3.3",
  "pygeofilter-duckdb==0.1.0",
  "shapely==2.1.2",
  "loguru==0.7.3",
  "click==8.3.3",
  "pandas==2.3.3",
  "geopandas==1.1.3",
  "pyarrow==24.0.0",
  "httpx>=0.28.1,<0.29.0",
  "attrs==26.1.0",
  "python-dateutil==2.9.0.post0",
  "pystac==1.14.3",
  "stac-geoparquet==0.7.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://github.com/Terradue/pygeofilter-aeronet#readme"
Issues = "https://github.com/Terradue/pygeofilter-aeronet/issues"
Source = "https://github.com/Terradue/pygeofilter-aeronet"

[tool.hatch.envs.prod]
path = "/app/envs/aeronet-client"

[tool.hatch.envs.dev]
extra-dependencies = [
  "pytest==9.0.2",
  "ruff==0.15.6",
]
[tool.hatch.envs.dev.scripts]
lint = "ruff format src tests"
check = "ruff check --fix src tests"

[project.scripts]
aeronet-client = "pygeofilter_aeronet.cli:main"

[tool.hatch.version]
path = "src/pygeofilter_aeronet/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pygeofilter_aeronet tests}"

[tool.coverage.run]
source_pkgs = ["pygeofilter_aeronet", "tests"]
branch = true
parallel = true
omit = [
  "src/pygeofilter_aeronet/__about__.py",
]

[tool.coverage.paths]
pygeofilter_aeronet = ["src/pygeofilter_aeronet", "*/pygeofilter-aeronet/src/pygeofilter_aeronet"]
tests = ["tests", "*/pygeofilter-aeronet/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
python_files = [
  "test_*.py",
  "tests_*.py",
]

[tool.hatch.envs.default.scripts]
test = "hatch run nose2"

[tool.hatch.envs.test]
description = "Test environment"
skip-install = false
dependencies = ["pytest==9.0.2", "pytest-cov==7.0.0"]

[tool.hatch.envs.test.scripts]
test = "pytest"
test-q = "pytest -q"
test-cov = "pytest --cov=transpiler_mate"
test-show-setup = "pytest --setup-show"

[[tool.hatch.envs.test.matrix]]
python = [
  "3.10",
  "3.11",
  "3.12",
  "3.13",
# pygeofilter-duckdb 0.1.0 declares:
#
# duckdb>=0.2.0
# duckdb<1.2.0
#  "3.14"
]
